<resources>
    <string name="app_name">Калькулятор</string>
    <string name="number1">Ввід</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="is">=</string>
    <string name="clear">CE</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="third">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="result">Результат</string>
    <string name="title">Простий калькулятор</string>
    <string name="exit">Вихід</string>
    <string name="point">.</string>
    <string name="about_app">Про програму</string>
    <string name="about_me">Розробив Мирош Володимир</string>
</resources>
