<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:background="@drawable/linerstyle"
        android:orientation="vertical">


        <EditText
            android:id="@+id/numberFirst"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:textSize="24dp"
            android:focusable="false"
            android:gravity="right|bottom"
            android:background="@drawable/edittextstyle"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:maxLength="6" />

        <TextView
            android:id="@+id/showRes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:paddingLeft="5dp"
            android:paddingBottom="2dp"
            android:hint="@string/result"
            android:layout_weight="2"
            android:gravity="right|bottom"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorRes"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:textSize="26dp"
            android:background="@drawable/button_red"
            android:text="@string/clear"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue"
                    android:text="@string/add"
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_sub"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue"
                    android:text="@string/sub"
                    android:textSize="28dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_mul"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue"
                    android:text="@string/mul"
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_div"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue"
                    android:text="@string/div"
                    android:textSize="28dp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/one"
                android:textSize="28dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/two"
                android:textSize="28dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/third"
                android:textSize="28dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <Button

                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/four"
                android:textSize="28dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/five"
                android:textSize="28dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/six"
                android:textSize="28dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/seven"
                android:textSize="28dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/eight"
                android:textSize="28dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/nine"
                android:textSize="28dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/point"
                android:textSize="28dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/zero"
                android:textSize="28dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_is"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_is_res"
                android:text="@string/is"
                android:textSize="28dp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>